Set minimum compute capability to 3.5.
Also, remove CUDA architecture 3.0 from the list of architectures
generated by the CUDA_SELECT_NVCC_ARCH_FLAGS macro. It can be included
there if the autodetection fails.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,9 @@ cmake_minimum_required(VERSION 3.1)
 find_package(CUDA REQUIRED)
 
 if(DEFINED AUTO_DETECT_ARCH AND "${AUTO_DETECT_ARCH}")
-	CUDA_SELECT_NVCC_ARCH_FLAGS(ARCH_FLAGS "Auto")
+  CUDA_DETECT_INSTALLED_GPUS(CUDA_ARCH_LIST)
+  list(REMOVE_ITEM CUDA_ARCH_LIST "3.0")
+  CUDA_SELECT_NVCC_ARCH_FLAGS(ARCH_FLAGS ${CUDA_ARCH_LIST})
 	set(CUDA_ARCH "${ARCH_FLAGS}" CACHE STRING "Value of the NVCC -arch option." FORCE)
 endif()
 message(STATUS "CUDA_ARCH: \"${CUDA_ARCH}\"")
