[UPDATE] Add install(EXPORT ...)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,9 +33,14 @@ endif()
 
 install(
 	TARGETS sgm
+	EXPORT sgmTargets
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
 	LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
 	RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
+)
+install(EXPORT sgmTargets
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/cmake/sgm
+  NAMESPACE sgm::
 )
 
 install(
